--- a/ComingSoon.html
+++ b/ComingSoon.html
@@ -82,7 +82,7 @@
       </span>
 
       <span class="col-25" style="align-self:center;margin-left: 1vw; margin-right: 1vw;">
-        <img src="./Figures/NCPhoto.png" alt="Grant Goejen" style="width:100%">
+        <img src="./Figures/NCPhoto.png" alt="Grant Goedjen" style="width:100%">
       </span>
 
       <span class="col-21" style="align-self:center; margin-left: 1vw; margin-right: 1vw">
