--- a/acknowledgement.html
+++ b/acknowledgement.html
@@ -86,11 +86,11 @@
     
 <hr>
     <br>
-    <h2 align="center">The Arnold Reserach Group</h2>
+    <h2 align="center">The Arnold Research Group</h2>
     <div class="row" style="width:90vw;">
       <div style="width: 40vw; padding: 2vw;">
         <div align="center">
-              <p align="center">I would also like to thank the Arnold lab group. This amazing group of individuals have been the keystone of my sanity navigating graduate school in the middle of a global pandemic and the countless "upresidented times" we've faced the last two years. Their support, advice, and friendship has meant the world to me and I would not have made it this far without them.</p>
+              <p align="center">I would also like to thank the Arnold lab group. This amazing group of individuals have been the keystone of my sanity navigating graduate school in the middle of a global pandemic and the countless "unprecedented times" we've faced the last two years. Their support, advice, and friendship has meant the world to me and I would not have made it this far without them.</p>
         </div>
       </div>
       <div style="width: 60vw; padding: 2vw;">
