--- a/currentprojects.html
+++ b/currentprojects.html
@@ -99,8 +99,8 @@ My research focuses on occurrence and fate of first generation of neonicotinoids
   <img src="./Figures/Neonics.png" width = "100%"/> <!-- Neonic structures Image -->
 </p><br>
 
-"Neo" meaning "new" and nicotinoids meaning "Nicotine-Like":
-Neonicotinoids are a suite of systemic pesticides first derived from nicotine in the early 1990's and are now one of the most frequently-applied pesticides in the world! The most common neonicotinoids include:<b><em>Imidacloprid, Clothianidin, Thiamethoxam, Thiacloprid, and Acetamiprid</em></b>. Chaces are, if you've eaten produce or food produced using grain in the last 30 years then you've likely eaten something containing neonicotinoids! 
+"Neo" meaning "new" and "nicotinoid" meaning "Nicotine-Like":
+Neonicotinoids are a suite of systemic pesticides first derived from nicotine in the early 1990's and are now one of the most frequently-applied pesticides in the world! The most common neonicotinoids include:<b><em>Imidacloprid, Clothianidin, Thiamethoxam, Thiacloprid, and Acetamiprid</em></b>. Chances are, if you've eaten produce or food produced using grain in the last 30 years then you've likely eaten something containing neonicotinoids! 
 
 <br><br>
 
@@ -148,7 +148,7 @@ Fipronil and it's degradation products are phenylpyrazole insecticides commonly 
 </ul.2>
 <br>
 
-Unlike neonicotinoids, however, fipronil is a broad-spectrum insecticide which can effect organisms indiscriminately. Fipronil blocks the gabaa-gated chloride (Cl-) channels in the central nervous system of any organism unfortunate enough to be exposed and results in paralysis, seizures, and death. The lower specificity of fipronil means that a much wider suite of organisms may, and are, negatively effected. Fipronil has had observational effects on a large variety of organisms, and while it generally is not toxic to humans at low concentrations, has significantly impacted smaller non-target organisms including <a href = "https://doi.org/10.1016/j.envpol.2019.05.067">fish and aquatic organisms</a> and <a href = "https://doi.org/10.1016/j.scitotenv.2021.148678">pollinators</a>.
+Unlike neonicotinoids, however, fipronil is a broad-spectrum insecticide which can effect organisms indiscriminately. Fipronil blocks the GABAA-gated chloride (Cl-) channels in the central nervous system of any organism unfortunate enough to be exposed and results in paralysis, seizures, and death. The lower specificity of fipronil means that a much wider suite of organisms may, and are, negatively effected. Fipronil has had observational effects on a large variety of organisms, and while it generally is not toxic to humans at low concentrations, has significantly impacted smaller non-target organisms including <a href = "https://doi.org/10.1016/j.envpol.2019.05.067">fish and aquatic organisms</a> and <a href = "https://doi.org/10.1016/j.scitotenv.2021.148678">pollinators</a>.
 
 <br><br>
 <h2>Environmental Fate</h2>
@@ -169,7 +169,7 @@ Luckily, though, neonicotinoids have very small Henry's constants and do not vol
 <br><br>
 <h3><em>Fipronil</em></h3> 
 
-Fipronil has a comparatively lower solubility in water and significantly higher sorption to soils and sediments. Fipronil's moderately hydrophobic structure means that it readily partitions to soil and has limited transport in water and air. Strong sorption to solids leads to a high fraction of fipronil retained in soil, sediment, and compost with few available routes from horizontal transfer to other media. That being said, fipronil has been observed at lower concentrations but at similar rates to neonicotinoids and other insecticides and it believed to use particulate in water and air to hitch a ride in streams and wind to contaminated secondary locations. Fipronil has relatively low rates of photolysis, hydrolysis, and microbial degradation in sediment and water. WHen degradation products do form, they are often eaully as toxic and have similar half-lives ranging in the thousands of days.
+Fipronil has a comparatively lower solubility in water and significantly higher sorption to soils and sediments. Fipronil's moderately hydrophobic structure means that it readily partitions to soil and has limited transport in water and air. Strong sorption to solids leads to a high fraction of fipronil retained in soil, sediment, and compost with few available routes from horizontal transfer to other media. That being said, fipronil has been observed at lower concentrations but at similar rates to neonicotinoids and other insecticides and it believed to use particulate in water and air to hitch a ride in streams and wind to contaminated secondary locations. Fipronil has relatively low rates of photolysis, hydrolysis, and microbial degradation in sediment and water. WHen degradation products do form, they are often equally toxic and have similar half-lives ranging in the thousands of days.
 
 <br><br>
 <h2>Why Should You Care?</h2>
