--- a/cv.html
+++ b/cv.html
@@ -119,7 +119,7 @@ Texas Tech University
 <br><br>
 
 <!----------------------------------------------------------------------------------------------------------------------->
-<!-- CV: Honors and Aeards --> 
+<!-- CV: Honors and awards --> 
 
 <h2 style="text-align:left">Honors and Awards</h2> 
 <hr>
@@ -177,10 +177,10 @@ Awarded for work pertaining to the degradation and leaching potential of neonico
 <br>
 
 
-<b><em>Texas Tech University; United States Geological Survey</em></b>, Lubbbock, Tx <br>
-<b><em>Graduate Reserach Assistant</em></b>,William Asquith and Theodore Cleveland <br>
+<b><em>Texas Tech University; United States Geological Survey</em></b>, Lubbock, Tx <br>
+<b><em>Graduate Research Assistant</em></b>,William Asquith and Theodore Cleveland <br>
 <ul style="margin-left: 2%; line-height: 1.6;">
-    <li>Performed computational statistical hydrology developed regional hydrographs using HEC-SSP.</li>
+    <li>Performed computational statistical hydrology developed regional hydrograph's using HEC-SSP.</li>
     <li>Programmed statistical calculations of regional hydrograph skew factors in R.</li>
     <li>Evaluated site data for validity for statistical analysis.</li>
     <li>Maintained Git repository of collected data.</li>
@@ -189,8 +189,8 @@ Awarded for work pertaining to the degradation and leaching potential of neonico
 <hr>	
 <br>
 
-<b><em>Texas Tech University</em></b>, Lubbbock, Tx <br>
-<b><em>Summer Reserach Assistant</em></b>, Siva Vanapalli <br>
+<b><em>Texas Tech University</em></b>, Lubbock, Tx <br>
+<b><em>Summer Research Assistant</em></b>, Siva Vanapalli <br>
 <ul style="margin-left: 2%; line-height: 1.6;">
     <li>Developed preliminary toxicity screening assessment for the model organism C. elegans.</li>
     <li>Aided in the synthesis of biomicrofluidic systems using photolithography techniques.</li>
@@ -201,8 +201,8 @@ Awarded for work pertaining to the degradation and leaching potential of neonico
 <hr>
 <br>
 
-<b><em>Texas Tech University</em></b>, Lubbbock, Tx <br>
-<b><em>Summer Reserach Assistant</em></b>, Siva Vanapalli <br>
+<b><em>Texas Tech University</em></b>, Lubbock, Tx <br>
+<b><em>Summer Research Assistant</em></b>, Siva Vanapalli <br>
 <ul style="margin-left: 2%; line-height: 1.6;">
     <li>Developed preliminary toxicity screening assessment for the model organism C. elegans.</li>
     <li>Aided in the synthesis of biomicrofluidic systems using photolithography techniques.</li>
@@ -213,12 +213,12 @@ Awarded for work pertaining to the degradation and leaching potential of neonico
 <hr>
 <br>
 
-<b><em>Texas Tech University</em></b>, Lubbbock, Tx <br>
-<b><em>Summer Reserach Assistant</em></b>, Audra Morse <br>
+<b><em>Texas Tech University</em></b>, Lubbock, Tx <br>
+<b><em>Summer Research Assistant</em></b>, Audra Morse <br>
 <ul style="margin-left: 2%; line-height: 1.6;">
     <li>Studied the abilities of organo-selenium embedded tubing to inhibit urease to prevent the catalyzation of urea to ammonia in closed, long-term bioreactors for urine reclamation. </li>
     <li>Aided in the operation of a NASA bioreactor for urine reclamation for long-term space operations.</li>
-    <li>Designed a structure to evaluate the standing flowrate of new membranes based on the constant head test.</li>
+    <li>Designed a structure to evaluate the standing flow rate of new membranes based on the constant head test.</li>
 </ul>
 <br>
 
@@ -317,7 +317,7 @@ Awarded for work pertaining to the degradation and leaching potential of neonico
     <li>Aided in analytical method development and quantitative techniques for various research projects.</li>
     <li>Trained undergraduate students, graduate students, and postdoctoral scholars on LC-MS/MS, HPLC, GCMS, and computation modeling and statistics in R.</li>
     <li>Collaborated research in civil and environmental engineering, public health, and the School of Medicine.</li>
-    <li>Safety manager / emergancy contact for three (3) wet environmental chemistry laboratories.</li>
+    <li>Safety manager / emergency contact for three (3) wet environmental chemistry laboratories.</li>
 </ul>
 <br>
 <hr>
@@ -350,7 +350,7 @@ Awarded for work pertaining to the degradation and leaching potential of neonico
 <b><em>Student Engineer / EIT</em></b>, District Design Office <br>
 <ul style="margin-left: 2%; line-height: 1.6;">
     <li>Drafting, analysis, and design in Bentley MicroStation, Openroads, SignCAD, ArcGIS suite, and Microsoft Excel. </li>
-    <li>Removal of organic contaminants by pre-oxidation and biofiltration in a pilot-scale drinking water treatment plant</li>
+    <li>Removal of organic contaminants by pre-oxidation and bio-filtration in a pilot-scale drinking water treatment plant</li>
     <li>Hydraulic modeling and design in HEC-RAS, HY-8, HydroCAD, and HEC-HMS.</li>
     <li>Presentation of proposed design and materials in public town hall meetings.</li>
     <li>Monitoring, design, and inspection field operations.</li>
@@ -393,7 +393,7 @@ Awarded for work pertaining to the degradation and leaching potential of neonico
 <!----------------------------------------------------------------------------------------------------------------------->
 <!-- CV: Publications --> 
 
-<h2 style="text-align:left">Punlications</h2> 
+<h2 style="text-align:left">Publications</h2> 
 <hr>
 <hr>
 <br>
@@ -402,7 +402,7 @@ Awarded for work pertaining to the degradation and leaching potential of neonico
 
 <b>Goedjen, G.</b>, Berens, M., Capel, P., and Arnold, W. “Watershed-level Factors Influencing the Occurrence of Neonicotinoid and Fipronil Insecticides in Midwest Surface Waters”, <em>In Progress.</em> <br><br>
 <b>Goedjen, G.</b>, Berens, M., Capel, P., and Arnold, W. “Comparative Occurrence of Neonicotinoids and Fiproles in Minnesota Hydrogeologic Systems.”, <em>In Progress.</em> <br><br>
-Berg, S., Kuo-Dahab, C.,  <b>Goedjen, G.</b>, and Arnold, W. “Removal of organic contaminants by pre-oxidation and biofiltration in a pilot-scale drinking water treatment plant”, <em>In Progress.</em>  <br><br>
+Berg, S., Kuo-Dahab, C.,  <b>Goedjen, G.</b>, and Arnold, W. “Removal of organic contaminants by pre-oxidation and bio-filtration in a pilot-scale drinking water treatment plant”, <em>In Progress.</em>  <br><br>
 
 <!----------------------------------------------------------------------------------------------------------------------->
 <!-- CV: Publications --> 
@@ -439,7 +439,7 @@ Berg, S., Kuo-Dahab, C.,  <b>Goedjen, G.</b>, and Arnold, W. “Removal of organ
 <br>
 
 <!----------------------------------------------------------------------------------------------------------------------->
-<!-- CV: Professiona Services --> 
+<!-- CV: l Services --> 
 
 <h2 style="text-align:left">Professional Service</h2> 
 <hr>
@@ -471,7 +471,7 @@ Berg, S., Kuo-Dahab, C.,  <b>Goedjen, G.</b>, and Arnold, W. “Removal of organ
 <hr>
 <br>
 
-<h3 style="text-align:left">Programming Lanugages:</h3>
+<h3 style="text-align:left">Programming Languages:</h3>
 <ul style="margin-left: 2%; line-height: 1.6;">
     <li>R</li>
     <li>Python</li>
