--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html lang="en">
 <head>
-    <meta charset="UTF-8" name="viewport" content="width= device-width, initital-scale=1.0">
+    <meta charset="UTF-8" name="viewport" content="width= device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Goedjen Research Website</title>
@@ -67,28 +67,37 @@
 <div style="margin-left: 1.5vw;margin-right:1.5vw">
     <div class="col-100">
     <div style="display: flex; justify-content: center;"">
-      <span class="col-35" style="align-self:center; margin-left: 1vw; margin-right: 1vw; ">
+      
+      <span class="imageGone-35">
         <img src="./Figures/Goldy.png" alt="UMN Goldy M Logo" style="width:100%">
       </span>
 
-      <span class="col-25" style="align-self:center;margin-left: 1vw; margin-right: 1vw;">
-        <img src="./Figures/NCPhoto.png" alt="Grant Goejen" style="width:100%">
+      <span class="imagestay-25">
+        <img src="./Figures/NCPhoto.png" alt="Grant Goedjen" style="width:100%">
       </span>
 
-      <span class="col-21" style="align-self:center; margin-left: 1vw; margin-right: 1vw">
+      <span class="imageGone-21">
         <img src="./Figures/DoubleT.png" alt="Texas Tech Double T" style="width:100%">
       </span>
+
     </div>
 
   </div>
 </div>
 <br>
 
-<h1>About Me</h1>
+<h1><a>About Me</a></h1>
 <hr><hr><br>
-I'm a doctoral candidate with the Arnold Research laboratory at the University of Minnesota Department of Civil, Environmental and Geo Engineering (anticipated graduation: June 2023) and a certified EIT in the states of Minnesota and Texas. Originally from Texas, I studied Environmental Engineering at Texas Tech University where I received my Masters and Bachelors of Science in Environmental Engineering at Texas Tech University. Following completion of my masters degree I joined the University of Minnesota continue my work in environmental chemistry in the Arnold Laboratory.  My current area of interest, highlighted in the <a href="currentprojects.html">researh interests</a> section, focuses on environmental fate and transport of two classes of agricultural products: <b><em>Neonicotinoids and Fipronil</em></b>. My research aims to identify the extent of neonicotinoid and fipronil presence in surface waters, groundwater, water/wastewater treatment plants, and in soil systems while tracking trends in degradation and removal through various treatment and remediation processes. 
+Hello! I'm a doctoral candidate with the Arnold Research laboratory at the University of Minnesota Department of Civil, Environmental and Geo Engineering (anticipated graduation: June 2023) and a certified EIT in the states of Minnesota and Texas. Originally from Texas, I studied Environmental Engineering at Texas Tech University where I received my Masters and Bachelors of Science in Environmental Engineering at Texas Tech University. Following completion of my masters degree I joined the University of Minnesota continue my work in environmental chemistry in the Arnold Laboratory.  My current area of interest, highlighted in the <a href="currentprojects.html">research interests</a> section, focuses on environmental fate and transport of two classes of agricultural products: <b><em>Neonicotinoids and Fipronil</em></b>. My research aims to identify the extent of neonicotinoid and fipronil presence in surface waters, groundwater, water/wastewater treatment plants, and in soil systems while tracking trends in degradation and removal through various treatment and remediation processes. 
+
 <br><br>
+
 Following my impeding graduation in June 2023 I hope to continue my work as an industry-focused postdoctoral scholar before going to work as a subject expert in hazardous waste site investigation and remediation.
+
+<br><br>
+
+As I continue through my research, I'll continue to build this website to ensure any knowledge gained on my journey is accessible to those who may be interested or curious in my work. Enjoy!
+
 <br><br>
 
 <div class = "attn">
@@ -107,7 +116,7 @@ Following my impeding graduation in June 2023 I hope to continue my work as an i
 <hr><hr>
 
 <br>
-My research focuses on occurrence and fate of first generation of neonicotinoids (i.e. classical neonicotinoids) and nipronil in the environment. My research focus includes:
+My research focuses on occurrence and fate of first generation of neonicotinoids (i.e. classical neonicotinoids) and fipronil in the environment. My research focus includes:
 
 <br>
 <div style="padding-left: 2vw">
@@ -122,20 +131,19 @@ My research focuses on occurrence and fate of first generation of neonicotinoids
 </div>
 
 
-
-<h1>Knowledgebase</h1>
 <br>
+<h1><a>Skillsets</a></h1>
 <hr><hr>
 <br>
 
-I have a wide variety of interests that covers a large knowledge base. My previous and current work emcompoases a large variety of fields, inlcuding topics such as:
+I have a wide variety of interests that covers a large knowledge base. My previous and current work encompasses a large variety of fields, including topics such as:
 
 <div style="padding-left: 2vw">
   <ul>
     <li>Environmental Chemistry, Engineering, Toxicology,</li>
     <li>Quantitative Analytical Techniques (HPLC, UHPLC, MS, LC-MS, LC-MS/MS, LC-MS-QTOF, UvVis), </li>
-    <li>Computational Statistic (bayesian and frequentist) and Modeling (R, Python), </li>
-    <li>Computational Hydralucis and Hydrology,</li>
+    <li>Computational Statistic (bayesian and frequentest) and Modeling (R, Python), </li>
+    <li>Computational Hydraulics and Hydrology,</li>
     <li>Fate and Transport Modeling,</li>
     <li>CAD Drafting and GIS Analysis, </li>
     <li>Database and Information Management,</li>
@@ -147,11 +155,11 @@ I have a wide variety of interests that covers a large knowledge base. My previo
 </div><br>
 
 
-For more information, I urge you to take a look at my circum vitae <a href="cv.html">here!</a>
+For more information, I urge you to take a look at my <a href="cv.html">circum vitae!</a>
 
 
-
-<h1>Contact Information</h1>
+<br><br>
+<h1><a>Contact Information</a></h1>
 <hr><hr>
 <br>
 <h2>Email</h2>
