--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
     <a href="landacknowledgements.html">Land Acknowledgement</a>
     <a href="https://williamarnold.org">Arnold Lab Website</a>
     <a href="contact.html">Contact Me!</a>
+    <a href="topaz.html"> Rescue Animals</a>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
   </div>
 
