--- a/topaz.html
+++ b/topaz.html
@@ -66,7 +66,7 @@
 <!-- Menu: Topaz --> 
 
 <h1 style="text-align: center"><a>Topaz and Friends</a></h1>
-<p style="text-align: center"><em> Academia is tough...to help you deal with the stress, enjoy some photos of the cats and dogs I've helped <br> while working with local rescues in Lubbock, Tx. featuring my cat, Topaz. Enjoy! </em></p>
+<p style="text-align: center"><em> Academia is tough...to help you deal with the stress, enjoy some photos of the animals I've helped <br> while working with local rescues. featuring my cat, Topaz. Enjoy! </em></p>
 <br><hr><hr>
 
 <br><br>
