--- a/topaz.html
+++ b/topaz.html
@@ -77,7 +77,7 @@
     <div class="hcg-slider-body">
       <a class="hcg-slides animated" style="display:block">
         <span class="hcg-slide-number">1/5</span>
-        <img src="./slideshow/FB_IMG_1563300361283_Original.jpg" alt="image 1">
+        <img src="./slideshow/IMG_3850.JPG"" alt="image 1">
         <span class="hcg-slide-text">image 1</span>
       </a>
     </div>
@@ -94,7 +94,9 @@
 (function(){
 //If you want to include more images, add the link name and URL of the image in the array list below.
 	let images_list = [
-  {"url":"./slideshow/FB_IMG_1563300361283_Original.jpg","name":"image 1","link":""},
+        {"url":"./slideshow/IMG_3850.JPG","":"","link":""},
+        {"url":"./slideshow/IMG_3589.JPG","":"","link":""},
+        {"url":"./slideshow/FB_IMG_1563300361283_Original.jpg","name":"image 1","link":""},
         {"url":"./slideshow/IMG_0589.JPG","":"","link":""},
         {"url":"./slideshow/IMG_0785.JPG","":"","link":""},
         {"url":"./slideshow/FB_IMG_1552863486068_Original.jpg","":"","link":""},
@@ -115,9 +117,8 @@
         {"url":"./slideshow/IMG_3374.JPG","":"","link":""},
         {"url":"./slideshow/IMG_3389.JPG","":"","link":""},
         {"url":"./slideshow/IMG_3404.JPG","":"","link":""},
-        {"url":"./slideshow/IMG_3409.JPG","":"","link":""},
-        {"url":"./slideshow/IMG_3589.JPG","":"","link":""},
-        {"url":"./slideshow/IMG_3850.JPG","":"","link":""}
+        {"url":"./slideshow/IMG_3409.JPG","":"","link":""}
+
 	];
 
 	let slider_id = document.querySelector("#hcg-slider-1");
