--- a/cv.html
+++ b/cv.html
@@ -191,7 +191,7 @@ Awarded for work pertaining to the degradation and leaching potential of neonico
 <br>
 
 <b><em>Texas Tech University</em></b>, Lubbock, Tx <br>
-<b><em>Summer Research Assistant</em></b>, Siva Vanapalli <br>
+<b><em>Summer Graduate Research Assistant</em></b>, Siva Vanapalli <br>
 <ul style="margin-left: 2%; line-height: 1.6;">
     <li>Developed preliminary toxicity screening assessment for the model organism C. elegans.</li>
     <li>Aided in the synthesis of biomicrofluidic systems using photolithography techniques.</li>
@@ -202,20 +202,9 @@ Awarded for work pertaining to the degradation and leaching potential of neonico
 <hr>
 <br>
 
-<b><em>Texas Tech University</em></b>, Lubbock, Tx <br>
-<b><em>Summer Research Assistant</em></b>, Siva Vanapalli <br>
-<ul style="margin-left: 2%; line-height: 1.6;">
-    <li>Developed preliminary toxicity screening assessment for the model organism C. elegans.</li>
-    <li>Aided in the synthesis of biomicrofluidic systems using photolithography techniques.</li>
-    <li>Researched effects of hexavalent chromium on C. elegans. </li>
-    <li>Maintained cultures of C. elegans and E. coli in a BSL-2 wet laboratory.</li>
-</ul>
-<br>
-<hr>
-<br>
 
 <b><em>Texas Tech University</em></b>, Lubbock, Tx <br>
-<b><em>Summer Research Assistant</em></b>, Audra Morse <br>
+<b><em>Undergraduate Research Assistant</em></b>, Audra Morse <br>
 <ul style="margin-left: 2%; line-height: 1.6;">
     <li>Studied the abilities of organo-selenium embedded tubing to inhibit urease to prevent the catalyzation of urea to ammonia in closed, long-term bioreactors for urine reclamation. </li>
     <li>Aided in the operation of a NASA bioreactor for urine reclamation for long-term space operations.</li>
@@ -231,27 +220,49 @@ Awarded for work pertaining to the degradation and leaching potential of neonico
 <hr>
 <br>
 
+
 <b><em>University of Minnesota</em></b>, Minneapolis Mn<br>
 <b><em>Teaching Assistant</em></b>, Department of Civil, Environmental, and Geo Engineering <br>
 <br>
 <ul style="margin-left: 2%; line-height: 1.6;">
     <li>
         <p style="text-align:left">
+            <em><b>CEGE 4170: Independent Study I</b></em>
+            <span style="float:right;">
+              <b>Fall 2022</b> <em>In-Person</em>
+            <br>
+            </span>
+            <br>
+        </p>	
+        <ul>
+             Undergraduate-level environmental engineering course consisting of one student per research project per semester. Advised students' approach and analytical methods through mentoring students with the establishment of major milestones, bi-monthly check-in's, and review of work. Student research projects for Fall 2022 include: 
+            <ul style="margin-left: 18pt">
+                <li> <em> socio-economic factors effecting pesticide exposure risk in the midwestern united states.</em> Subject matter included: Surface water hydrology, GIS analysis, statistical analysis, data management and manipulation in R and SQL, version control and GIT management, and socioeconomic influences.  </li>
+                <li> <em> Assessment of neonicotinoids and fipronil leaching potential through industrial and residential composting systems</em> Subject matter included: analytical chemistry, laboratory best practices, experimental design, LC-MS/MS analysis, statistical analysis, data management and manipulation in R and SQL, data visualization, and mass & energy balances. </li>
+            </ul>
+        </ul>
+    </li>
+<br>
+    <li>
+        <p style="text-align:left">
             <em><b>CEGE 5541:  Environmental Water Chemistry</b></em>
             <span style="float:right;">
-              <em><b>Fall 2022 (In-Person), Spring 2021 (Virtual)</b></em>   <br>
+              <b>Fall 2022</b>, <em>In-Person</em>; <b>Spring 2021</b>,<em>Virtual</em>
+              <br>
             </span>
             <br>
         </p>	
         <ul>
             Graduate-level environmental chemistry course averaging 45 students per semester covering: Basic Reactions, Kinetics, & Activity, Acid-Base Reactions, RedOx Reactions, Metal Complexation, Sorption, Mass Balance, Computational Chemistry in R and Minteq+, and Environmental Fate & Partitioning. Taught using a hybrid approach. 
         </ul>
+    </li>
 <br>
         <li>
             <p style="text-align:left">
                 <em><b>CEGE 8504: Theory of Unit Operations</b></em>
                 <span style="float:right;">
-                  <em><b>Fall 2022 (In-Person)</b></em>   <br>
+                  <b>Fall 2022, </b><em>In-Person</em>   
+                  <br>
                 </span>
                 <br>
             </p>	
@@ -266,7 +277,8 @@ Awarded for work pertaining to the degradation and leaching potential of neonico
     <p style="text-align:left">
         <em><b>Developed CEGE 8490: Data Quality </b></em>
         <span style="float:right;">
-          <em><b>Spring-Summer 2022</b></em>   <br>
+          <b>Spring-Summer 2022</b>   
+          <br>
         </span>
         <br>
     </p>	
@@ -398,12 +410,12 @@ Awarded for work pertaining to the degradation and leaching potential of neonico
 <hr>
 <hr>
 <br>
-<h3><b><em>Journal Publications (In Progress)</em></b></h3>
+<h3><b>Journal Publications, <em>In Prep.</em></b></h3>
 <br>
 
-<b>Goedjen, G.</b>, Berens, M., Capel, P., and Arnold, W. “Watershed-level Factors Influencing the Occurrence of Neonicotinoid and Fipronil Insecticides in Midwest Surface Waters”, <em>In Progress.</em> <br><br>
-<b>Goedjen, G.</b>, Berens, M., Capel, P., and Arnold, W. “Comparative Occurrence of Neonicotinoids and Fiproles in Minnesota Hydrogeologic Systems.”, <em>In Progress.</em> <br><br>
-Berg, S., Kuo-Dahab, C.,  <b>Goedjen, G.</b>, and Arnold, W. “Removal of organic contaminants by pre-oxidation and bio-filtration in a pilot-scale drinking water treatment plant”, <em>In Progress.</em>  <br><br>
+<b>Goedjen, G.</b>, Berens, M., Capel, P., and Arnold, W. “Watershed-level Factors Influencing the Occurrence of Neonicotinoid and Fipronil Insecticides in Midwest Surface Waters”, <em>In Prep.</em> <br><br>
+<b>Goedjen, G.</b>, Berens, M., Capel, P., and Arnold, W. “Comparative Occurrence of Neonicotinoids and Fiproles in Minnesota Hydrogeologic Systems.”, <em>In Prep.</em> <br><br>
+Berg, S., Kuo-Dahab, C.,  <b>Goedjen, G.</b>, and Arnold, W. “Removal of organic contaminants by pre-oxidation and bio-filtration in a pilot-scale drinking water treatment plant”, <em>In Prep.</em>  <br><br>
 
 <!----------------------------------------------------------------------------------------------------------------------->
 <!-- CV: Publications --> 
@@ -462,6 +474,14 @@ Berg, S., Kuo-Dahab, C.,  <b>Goedjen, G.</b>, and Arnold, W. “Removal of organ
     <li>TTU College of Engineering LYFE<em>, Environmental Engineer Mentor</em></li>
     <li>Men of STEM Learning Community<em>, Engineering Mentor and Advisor</em></li>
 </ul>
+<br>
+
+<h3 style="text-align:left">Community Outreach</h3>
+<ul style="margin-left: 2%; line-height: 1.6;">
+    <li>Queer Science, <em>Volunteer</em></li>
+</ul>
+<br>
+<hr>
 <br>
 
 <!-------r---------------------------------------------------------------------------------------------------------------->
