--- a/cv.html
+++ b/cv.html
@@ -237,8 +237,8 @@ Awarded for work pertaining to the degradation and leaching potential of neonico
         <ul>
              Undergraduate-level environmental engineering course consisting of one student per research project per semester. Advised students' approach and analytical methods through mentoring students with the establishment of major milestones, bi-monthly check-in's, and review of work. Student research projects for Fall 2022 include: 
             <ul style="margin-left: 18pt">
-                <li> <em> socio-economic factors effecting pesticide exposure risk in the midwestern united states.</em> Subject matter included: Surface water hydrology, GIS analysis, statistical analysis, data management and manipulation in R and SQL, version control and GIT management, and socioeconomic influences.  </li>
-                <li> <em> Assessment of neonicotinoids and fipronil leaching potential through industrial and residential composting systems</em> Subject matter included: analytical chemistry, laboratory best practices, experimental design, LC-MS/MS analysis, statistical analysis, data management and manipulation in R and SQL, data visualization, and mass & energy balances. </li>
+                <li> <em>socio-economic factors effecting pesticide exposure risk in the midwestern united states.</em> Subject matter included: Surface water hydrology, GIS analysis, statistical analysis, data management and manipulation in R and SQL, version control and GIT management, and socioeconomic influences.  </li>
+                <li> <em>Neonicotinoid and fipronil leaching potential from surface water runoff during industrial and residential composting systems.</em> Subject matter included: analytical chemistry, laboratory best practices, experimental design, LC-MS/MS analysis, statistical analysis, data management and manipulation in R and SQL, data visualization, and mass & energy balances. </li>
             </ul>
         </ul>
     </li>
