--- a/cv.html
+++ b/cv.html
@@ -101,7 +101,7 @@
 <br>
 
 <p style="text-align:left;font-weight:bold">
-    M.Enve. Environmental Engineering
+    M.Env.E. Environmental Engineering
     <span style="float:right;">
         May 2020
     </span>
@@ -381,7 +381,7 @@ Awarded for work pertaining to the degradation and leaching potential of neonico
     </span>
     <br>
 </p>
-<b><em>Student Engineer</em></b><br>, Department of Hydraulics and Hydrology
+<b><em>Student Engineer</em></b>, Department of Hydraulics and Hydrology <br>
 <ul style="margin-left: 2%; line-height: 1.6;">
     <li>Hydraulic systems design using ICPR, SWMM, HEC-HMS, HEC-RAS.</li>
     <li>2D and 3D design, surface development, manipulation, and drafting in AutoCAD, AutoCAD Civil 3D.</li>
