--- a/cv.html
+++ b/cv.html
@@ -229,7 +229,7 @@ Awarded for work pertaining to the degradation and leaching potential of neonico
         <p style="text-align:left">
             <em><b>CEGE 4170: Independent Study I</b></em>
             <span style="float:right;">
-              <b>Fall 2022</b> <em>In-Person</em>
+              <b>Fall 2022,</b> <em>In-Person</em>
             <br>
             </span>
             <br>
@@ -247,7 +247,7 @@ Awarded for work pertaining to the degradation and leaching potential of neonico
         <p style="text-align:left">
             <em><b>CEGE 5541:  Environmental Water Chemistry</b></em>
             <span style="float:right;">
-              <b>Fall 2022</b>, <em>In-Person</em>; <b>Spring 2021</b>,<em>Virtual</em>
+              <b>Fall 2022,</b> <em>In-Person</em>; <b>Spring 2021,</b><em>Virtual</em>
               <br>
             </span>
             <br>
@@ -293,7 +293,7 @@ Awarded for work pertaining to the degradation and leaching potential of neonico
         <p style="text-align:left">
             <em><b>CEGE 3542/5542: Environmental Engineering Laboratory</b></em>
             <span style="float:right;">
-              <em><b>Spring 2021 (In-Person)</b></em>   <br>
+              <b>Spring 2021,</b> <em>In-Person</em>  <br>
             </span>
             <br>
         </p>	
