--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@
     </div>
 </div>
 
+<style>
+
+  * {
+    border: 1pt black solid;
+  }
+</style>
+
 
 <div class="topnav" id="myTopnav">
     <a class="active" href="index.html">Home</a>
@@ -63,10 +70,10 @@
 
 <br>
 
-<div class="col-95">
+<div class="col-95" >
 
 <div style="margin-left: 1.5vw;margin-right:1.5vw">
-    <div class="col-100">
+    <div class="col-100Hide">
     <div style="display: flex; justify-content: center;"">
       
       <span class="imageGone-35">
