--- a/acknowledgement.html
+++ b/acknowledgement.html
@@ -40,7 +40,7 @@
           <a href="ComingSoon.html">Composting Systems</a>
         </div>
     </div>
-    <a href="cv.html">Circum Vitae</a>
+    <a href="cv.html">Curriculum Vitae</a>
     <a href="presentations.html">Recent Presentations</a>
     <a class="active" href="acknowledgement.html">Acknowledgements</a>
     <a href="landacknowledgements.html">Land Acknowledgement</a>
