--- a/cv.html
+++ b/cv.html
@@ -17,7 +17,7 @@
             <buttonBanner onclick="location.href='index.html'">
             Goedjen Research Website
             <div class="bannerH1">
-            Circum Vitae
+            Curriculum Vitae
             </div>
             </buttonBanner> 
         </div>
@@ -40,7 +40,7 @@
           <a href="ComingSoon.html">Composting Systems</a>
         </div>
     </div>
-    <a class="active" href="cv.html">Circum Vitae</a>
+    <a class="active" href="cv.html">Curriculum Vitae</a>
     <a href="presentations.html">Recent Presentations</a>
     <a href="acknowledgement.html">Acknowledgements</a>
     <a href="landacknowledgements.html">Land Acknowledgement</a>
