--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <a href="ComingSoon.html">Composting Systems</a>
         </div>
     </div>
-    <a href="cv.html">Circum Vitae</a>
+    <a href="cv.html">Curriculum Vitae</a>
     <a href="presentations.html">Recent Presentations</a>
     <a href="acknowledgement.html">Acknowledgements</a>
     <a href="landacknowledgements.html">Land Acknowledgement</a>
@@ -104,7 +104,7 @@ As I continue through my research, I'll continue to build this website to ensure
   <h1 class = "attnH"> Attention Employers!</h1>
   <center>
     <div class = "attnText"> 
-      I am now seeking post-graduation employment opportunities beginning in the summer of 2023. If you have an interest in my work and are seeking new engineering or chemists to build you team, please take a look at my <a href="cv.html" style="color:aqua">circum vitae</a> and contact me via <a href="mailto:goedj011@umn.edu?subject=Post-Graduation Employment Opportunity" style="color:aqua">email</a> for more information! 
+      I am now seeking post-graduation employment opportunities beginning in the summer of 2023. If you have an interest in my work and are seeking new engineering or chemists to build you team, please take a look at my <a href="cv.html" style="color:aqua">curriculum vitae</a> and contact me via <a href="mailto:goedj011@umn.edu?subject=Post-Graduation Employment Opportunity" style="color:aqua">email</a> for more information! 
     </div>
   </center>
 </div>
@@ -155,7 +155,7 @@ I have a wide variety of interests that covers a large knowledge base. My previo
 </div><br>
 
 
-For more information, I urge you to take a look at my <a href="cv.html">circum vitae!</a>
+For more information, I urge you to take a look at my <a href="cv.html">curriculum vitae!</a>
 
 
 <br><br>
